--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 services:
   frontend-prod:
     image: lineousreza/lineousrepo:dashboard-manajir-prod
-    container_name: frontend-manajir-prod
+    container_name: dashboard-manajir-prod
     restart: always
     ports:
       - "3021:3000"
